--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
 							<form>
 							<fieldset>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-								<input placeholder="O que procura para alugar?" class="oque">
+								<input placeholder="O que procura para alugar?" class="oque" autofocus>
 								<input placeholder="Em que lugar?" class="onde">
 								<input name="submit" class="submit" type="submit" value="Buscar">	
 							</fieldset>
